# src/modules/vp-access-business/growth/serializers/growth.serialize.ts
@@ -74,4 +74,14 @@ export class GrowthSerializer {
             period: data.period
         }
     }
+
+    static discount(data: any) {
+        return {
+            value: data.value,
+            trend: data.trend,
+            percentage: data.percentage,
+            period: data.period,
+            details: data.details
+        }
+    }
 }
